--- a/styles/style.css
+++ b/styles/style.css
@@ -59,3 +59,63 @@ body{
     background-image: url('../images/Circle\ design.svg');
     background-repeat: no-repeat;
 }
+/* Logos Section */
+.logos{
+    display: flex;
+    gap: 60px;
+    align-items: center;
+}
+.logo{
+    margin: 40px 0px;
+}
+hr{
+    border: 1px solid #3A3A3A;
+    opacity: 0.3;
+}
+#popular-collection{
+    margin-top: 100px;
+    text-align: center;
+    color: #3A3A3A;
+    margin-bottom: 30px;
+}
+/* Collection Section */
+.collection-items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin-bottom: 50px;
+}
+.collection{
+    padding: 17px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+.collection-ratings{
+    display: flex;
+}
+.fa-star.filled{
+    color: #FB8200;
+    font-size: 12px;
+}
+.fa-star.empty{
+    color: #c5c5c5;
+    font-size: 12px;
+}
+#collection-header{
+    font-size: 28px;
+}
+#collection-price{
+    font-size: 24px;
+}
+.collection-ratings p{
+    margin-left: 8px;
+}
+.collection p{
+    color: #3A3A3A;
+}
+#see-more{
+    text-align: right;
+    color: #E02C6D;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 100px;
+}
