--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 body{
     font-family: 'Poppins', sans-serif;
+}
+main{
     padding: 0 120px;
 }
 *{
@@ -118,4 +120,61 @@ hr{
     font-size: 16px;
     font-weight: 700;
     margin-bottom: 100px;
+}
+/* Featured Section */
+.featured{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#featured-header{
+    font-size: 38px;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+#featured-para{
+    color: #3A3A3A;
+    margin-bottom: 16px;
+}
+#featured-btn{
+    background-color: #E02C6D;
+    color: white;
+    border: none;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 10px 24px;
+}
+/* Footer Section */
+.footer{
+    padding-top: 50px;
+    background-color: #060425;
+}
+.footer-text{
+    text-align: center;
+    color: white;
+    margin-bottom: 17px;
+}
+.footer-header{
+    color: #e7e7e7;
+    margin-bottom: 3px;
+}
+.footer-text p{
+    color: #c2c2c2;
+    font-size: 14px;
+    font-weight: 700;
+}
+.icons{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    padding-bottom: 50px;
+}
+.icons div{
+    text-align: center;
+    width: 25px;
+    height: 25px;
+    color: white;
+    background-color: #1b1937;
+    padding: 8px;
+    border-radius: 25px;
 }
