--- a/styles/style.css
+++ b/styles/style.css
@@ -66,6 +66,7 @@ main{
     display: flex;
     gap: 60px;
     align-items: center;
+    justify-content: center;
 }
 .logo{
     margin: 40px 0px;
