--- a/styles/style.css
+++ b/styles/style.css
@@ -3,9 +3,6 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-main{
-    padding: 0 120px;
-}
 *{
     margin: 0px;
 }
@@ -17,6 +14,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 120px;
 }
 #header-influencer{
     color: #3A3A3A;
@@ -39,6 +37,7 @@ main{
     align-items: center;
     justify-content: space-between;
     margin-bottom: 70px;
+    padding: 0 120px;
 }
 .camera-para{
     margin-bottom: 16px;
@@ -67,6 +66,7 @@ main{
     gap: 60px;
     align-items: center;
     justify-content: center;
+    padding: 0 120px;
 }
 .logo{
     margin: 40px 0px;
@@ -87,6 +87,7 @@ hr{
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     margin-bottom: 50px;
+    padding: 0 120px;
 }
 .collection{
     padding: 17px;
@@ -128,6 +129,7 @@ hr{
     align-items: center;
     justify-content: space-between;
     margin-bottom: 100px;
+    padding: 0 120px;
 }
 #featured-header{
     font-size: 38px;
@@ -179,4 +181,42 @@ hr{
     background-color: #1b1937;
     padding: 8px;
     border-radius: 25px;
+}
+/* Media Queries */
+@media screen and (max-width: 576px) {
+    .header-right ul{
+        flex-direction: column;
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .header{
+        flex-direction: column;
+        align-items: flex-start;
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .camera{
+        flex-direction: column;
+        padding-right: 20px;
+        padding-left: 20px;
+        align-items: flex-start;
+    }
+    .logos{
+        flex-direction: column;
+        gap: 10px;
+    }
+    .logo{
+        margin: 10px 0px;
+    }
+    .collection-items{
+        grid-template-columns: repeat(1, 1fr);
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .featured{
+        flex-direction: column-reverse;
+        padding-left: 20px;
+        padding-right: 20px;
+        gap: 20px;
+    }
 }
