--- a/styles/style.css
+++ b/styles/style.css
@@ -220,3 +220,36 @@ hr{
         gap: 20px;
     }
 }
+@media screen and (min-width: 577px) and (max-width: 992px) {
+    .header{
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 20px;
+    }
+    .header-right ul{
+        flex-direction: column;
+    }
+    .camera{
+        flex-direction: column;
+        padding-left: 20px;
+        padding-right: 20px;
+        align-items: flex-start;
+    }
+    .logos{
+        flex-wrap: wrap;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .collection-items{
+        grid-template-columns: repeat(2, 1fr);
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .featured{
+        flex-direction: column-reverse;
+        gap: 20px;
+        align-items: flex-start;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
